[gd_scene load_steps=5 format=3 uid="uid://doydhv8ucg1q"]

[ext_resource type="Texture2D" uid="uid://ctfn7tlngrv50" path="res://Assets/BaseCannon.png" id="1_b2cjv"]
[ext_resource type="Script" uid="uid://dyh2l1befihfa" path="res://Scripts/cannone_a.gd" id="1_etfuu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nycf2"]
size = Vector2(335.5, 75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_etfuu"]
size = Vector2(127, 41)

[node name="Cannone_A" type="StaticBody2D"]
collision_mask = 18
script = ExtResource("1_etfuu")

[node name="Area_Rilevamento" type="Area2D" parent="."]
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_Rilevamento"]
position = Vector2(239, -2)
shape = SubResource("RectangleShape2D_nycf2")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-3.09482, 1.71994)
texture = ExtResource("1_b2cjv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.14609, 1.71994)
shape = SubResource("RectangleShape2D_etfuu")

[node name="Posizione_Proiettile" type="Marker2D" parent="."]
position = Vector2(69, -2)

[connection signal="body_entered" from="Area_Rilevamento" to="." method="_on_body_entered"]
[connection signal="body_exited" from="Area_Rilevamento" to="." method="_on_body_exited"]
